--- a/WebGL/绘制点/index.html
+++ b/WebGL/绘制点/index.html
@@ -56,7 +56,7 @@
       attribute vec4 a_position;
       uniform mat4 proj;
       void main(void) {
-        gl_Position = a_position * proj;
+        gl_Position = proj * a_position;
         gl_PointSize = 60.0;
       }
       `;
